--- a/playbooks/ansible-bootstrap.yml
+++ b/playbooks/ansible-bootstrap.yml
@@ -1,11 +1,14 @@
 ---
 
 - name: Bootstrap CoreOS host to be managed by ansible
-  hosts: labcluster
+  hosts: lab_cluster
   gather_facts: False
   roles:
     - ansible-coreos-bootstrap
   tasks:
+    - name: Make /opt directory owned by core user
+      sudo: yes
+      file: path=/opt state=directory owner=core group=core mode=0755
     - name: Install docker-py
       pip: name=docker-py
 
