Incluidos nuevos playbooks para simular almacenamiento S3

--- a/playbooks/roles/lab-cluster/tasks/main.yml
+++ b/playbooks/roles/lab-cluster/tasks/main.yml
@@ -8,3 +8,7 @@
 # tags: registry reload
 - include: registry.yml
   tags: registry
+
+# Configuracion del almacenamiento S3
+- include: storage.yml
+  tags: storage
