--- a/playbooks/roles/lab-cluster/files/units/registry-discovery@.service
+++ b/playbooks/roles/lab-cluster/files/units/registry-discovery@.service
@@ -4,6 +4,7 @@ BindsTo=registry@%i.service
 After=registry@%i.service
 
 [Service]
+ExecStartPre=-/usr/bin/etcdctl mkdir /services/registry
 ExecStart=/bin/sh -c "while true; do etcdctl set /services/registry/registry@%i '%H:5000' --ttl 3600;sleep 1800;done"
 ExecStop=/usr/bin/etcdctl rm /services/registry/registry@%i
 
