--- a/playbooks/roles/lab-cluster/files/units/mysql@.service
+++ b/playbooks/roles/lab-cluster/files/units/mysql@.service
@@ -11,7 +11,7 @@ ExecStartPre=-/usr/bin/docker rm mysql0
 ExecStartPre=/usr/bin/docker pull ${REGISTRY_URL}/mysql:latest
 ExecStart=/usr/bin/docker run --name mysql0 --rm \
           -v /opt/mysql/data:/var/lib/mysql \
-          -v /opt/mysql/conf.d:/etc/mysql/conf.d \
+          -v /opt/mysql/conf:/etc/mysql/conf.d \
           -p 3306:3306 ${REGISTRY_URL}/mysql:latest
 ExecStop=/usr/bin/docker stop mysql0
 
